--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,12 @@ Thumbs.db
 *.bak
 
 # -----------------
+# 测试截图
+# -----------------
+*-test.jpg
+*-test.png
+
+# -----------------
 # 敏感信息
 # -----------------
 secrets/
