--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,10 @@
-$schema: https://developers.railway.app/railway.schema.json
+[build]
+builder = "nixpacks"
+buildCommand = "pip install -r requirements.txt"
 
-services:
-  web:
-    source: .
-    build:
-      builder: nixpacks
-      buildCommand: pip install -r web_platform/requirements.txt
-    deploy:
-      startCommand: cd web_platform && gunicorn app:app --host 0.0.0.0 --port $PORT
-      healthcheckPath: /
-      healthcheckTimeout: 100
-      restartPolicyType: on_failure
-      restartPolicyMaxRetries: 10
+[deploy]
+startCommand = "cd web_platform && gunicorn app:app --host 0.0.0.0 --port $PORT"
+healthcheckPath = "/"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
